# internal/api/handler.go
@@ -129,6 +129,9 @@ func NewHandler() *gin.Engine {
 			docker.GET("/containers", dockerApi.Containers)
 			docker.GET("/info", dockerApi.Info)
 			docker.GET("/logs/:server/:container", dockerApi.Logs)
+			docker.POST("/start", dockerApi.Start)
+			docker.POST("/stop", dockerApi.Stop)
+			docker.POST("/restart", dockerApi.Restart)
 		}
 	}
 
